숙소 예약 사용자 연결 완료